RESOLVED FIXED149077
Still need view snapshotting code for non-IOSurface for the sim
https://bugs.webkit.org/show_bug.cgi?id=149077
Summary Still need view snapshotting code for non-IOSurface for the sim
Beth Dakin
Reported 2015-09-11 15:26:05 PDT
l need view snapshotting code for non-IOSurface for the sim
Attachments
Patch (9.04 KB, patch)
2015-09-11 15:27 PDT, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2015-09-11 15:27:08 PDT
WebKit Commit Bot
Comment 2 2015-09-11 15:27:57 PDT
Attachment 261021 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/mac/ViewSnapshotStore.h:57: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebKit2/UIProcess/mac/ViewSnapshotStore.mm:150: Wrong number of spaces before statement. (expected: 4) [whitespace/indent] [4] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2015-09-11 15:30:15 PDT
Comment on attachment 261021 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=261021&action=review > Source/WebKit2/UIProcess/mac/ViewGestureControllerMac.mm:570 > +#if USE(IOSURFACE) No need. This is always true on Mac. > Source/WebKit2/UIProcess/mac/ViewGestureControllerMac.mm:819 > +#if USE(IOSURFACE) No need. This is always true on Mac.
Beth Dakin
Comment 4 2015-09-11 15:33:44 PDT
Beth Dakin
Comment 5 2015-09-11 16:06:32 PDT
Note You need to log in before you can comment on or make changes to this bug.